# freq-bot

./: .gitignore  INSTALL  Makefile.in  VERSION  aclocal.m4  config.defaults  configure  configure.ac  freqbot.conf.example  getpid.py  start.py  todo
data/db/: .gitignore  weather.db
dists/debian/: control
dists/freebsd/: Makefile  pkg-deinstall  pkg-descr  pkg-install
doc/: Makefile.in
doc/help/: afor-ru.txt  anek-ru.txt  atr-ru.txt  bash-ru.txt  borb-ru.txt  bug-ru.txt  calc-ru.txt  def-ru.txt  dns-ru.txt  fomenko-ru.txt  header-ru.txt  horo-ru.txt  ibash-ru.txt  invite-ru.txt  it-ru.txt  jc-ru.txt  juick_msg-ru.txt  juick_tag_msg-ru.txt  juick_tag_user-ru.txt  juick_user-ru.txt  juick_user_info-ru.txt  last-ru.txt  lastfriends-ru.txt  lastloved-ru.txt  lastneighbours-ru.txt  lasttracks-ru.txt  now-ru.txt  nya-ru.txt  ostrie-ru.txt  port-ru.txt  price-ru.txt  sonnik-ru.txt  taste-ru.txt  telcode-ru.txt  top-ru.txt  topalbums-ru.txt  topartists-ru.txt  toptracks-ru.txt  tr-ru.txt  true-ru.txt  (+11 more)
lang/: en.msg  ru.msg
modules/: SOAP.py  cerberus.py  html2text.py
modules/simplejson/: __init__.py
src/kernel/: config.py  freq.py  item.py  lang.py  log.py  muc.py  options.py  pluginloader.py  twistedwrapper.py
src/plugins/alias/: manage.py
src/plugins/bot/: rewrites.py
src/plugins/cerberus/: filt.py
src/plugins/chatlogs/: chatlogs.py  htpasswd.py
templates/: chatlog_footer.html  chatlog_header.html  copying
tools/: addch  builddoc.py  copying  cp  depends.py  freqtool.in  getrev  makedeb  mkdata  mytest  sort
tools/rc.d/: debian  freebsd
(+44 files in other folders)
